# arango-cypher

./: .env.example  .gitignore  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  docker-compose.neo4j.yml  docker-compose.pytest.yml  docker-compose.yml  main.py  pyproject.toml  txt
.github/workflows/: ci.yml  nl2cypher-eval.yml
arango_cypher/: __init__.py  _env.py  api.py  cli.py  corrections.py  nl_corrections.py  parser.py  profile.py  schema_acquire.py  schema_cache.py  service.py  tools.py  translate_v0.py
arango_cypher/_antlr/: CypherLexer.py  CypherParser.py  CypherVisitor.py  __init__.py
arango_cypher/_translate_v0/: __init__.py  calls.py  core.py  formatting.py  hints.py  literals.py  naming.py  state.py  unwind.py  writes.py
arango_cypher/extensions/: __init__.py  document.py  geo.py  procedures.py  search.py  vector.py
arango_cypher/nl2cypher/: README.md  __init__.py  _aql.py  _core.py  entity_resolution.py  fewshot.py  providers.py  tenant_guardrail.py  tenant_scope.py
arango_cypher/nl2cypher/corpora/: movies.yml  northwind.yml  social.yml
arango_cypher/service/: __init__.py  app.py  mapping.py  models.py  observability.py  registry.py  security.py  ui.py
arango_cypher/service/routes/: __init__.py  connect.py  corrections.py  cypher.py  health.py  nl.py  owl.py  schema.py  tools.py
arango_query_core/: __init__.py  aql.py  errors.py  exec.py  extensions.py  mapping.py  owl_rdflib.py  owl_turtle.py
docs/: arangodb_schema_analyzer_bug_report.md  implementation_plan.md  multitenant_prd.md  polyglot_strategy.md  python_prd.md  requirements_plan.md  schema_inference_bugfix_prd.md  v0_1_query_corpus.md
docs/arango_packaging_service/: arango_packaging.md  arango_packaging_service_api.md  arango_service_maker_repo.md  deployment_runbook.md
docs/audits/: 2026-04-28-post-hardening-audit.md  README.md
docs/research/: nl2cypher2aql_analysis.md  nl3cypher.md
docs/schema_analyzer_issues/: 06-emit-tenant-scope-annotations.md  07-prd-3-13-schema-change-detection.md  08-emit-physical-layout-and-shard-topology.md  README.md  WAVE_4M_ARCHITECTURE.md
grammar/: Cypher.g4
scripts/: benchmark_translate.py  download_icij_dataset.py  download_tck.py  update_goldens.py
tests/: conftest.py  test_agentic_tools.py  test_antlr_parser_corpus.py  test_call_procedures.py  test_cli.py  test_corpus_smoke.py  test_env_password.py  test_extensions.py  test_extensions_document.py  test_extensions_vector_geo.py  test_mapping_helpers.py  test_nl2cypher.py  test_nl2cypher_caching.py  test_nl2cypher_entity_resolution.py  test_nl2cypher_eval_gate.py  test_nl2cypher_execution_grounded.py  test_nl2cypher_fewshot.py  test_nl2cypher_prompt_builder.py  test_nl2cypher_tenant_guardrail.py  test_nl2cypher_tenant_scope.py  test_nl_corrections.py  test_observability.py  test_owl_rdflib.py  test_owl_turtle_roundtrip.py  test_packaging_smoke.py  test_profile.py  test_request_model_validators.py  test_schema_acquire.py  test_schema_acquire_heuristic.py  test_schema_acquire_warnings.py  test_schema_change_detection.py  test_service.py  test_service_connect_diagnostics.py  test_service_hardening.py  test_service_middleware.py  test_service_nl.py  test_service_schema_status.py  test_service_startup.py  test_service_tenants.py  test_shard_families_adoption.py  (+49 more)
tests/fixtures/cases/: basic_match_return.yml  call_yield.yml  case_expr.yml  embedded_rel.yml  expressions_and_varlen.yml  movies_multi_label.yml  multi_match.yml  multi_pattern_parts.yml  nested_hybrid_extensions.yml  optional_match.yml  relationships_one_hop.yml  relationships_two_hop.yml  string_ops.yml  union.yml  unwind.yml  with_and_aggregation.yml  with_then_match.yml
tests/fixtures/datasets/movies/: lpg-data.json
tests/fixtures/mappings/: embedded.export.json  hybrid.export.json  hybrid.owl.ttl  lpg.export.json  lpg.owl.ttl  movies_lpg.export.json  pg.export.json  pg.owl.ttl
tests/helpers/: corpus.py  mapping_fixtures.py
tests/integration/: conftest.py  datasets.py  neo4j_reference.py  seed.py  test_arangodb_smoke.py  test_create_smoke.py  test_execute_translated_queries.py  test_movies_crossvalidate.py  test_neo4j_movies_dataset_smoke.py  test_northwind_crossvalidate.py  test_northwind_dataset_smoke.py  test_packaging_smoke.py  test_profile_integration.py
tests/nl2cypher/: __init__.py
tests/nl2cypher/eval/: __init__.py  baseline.anthropic.json  baseline.json  configs.yml  corpus.yml  runner.py
tests/tck/: analyze_coverage.py  gherkin.py  normalize.py  runner.py  test_tck_harness_smoke.py
tests/tck/features/: sample.feature
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/api/: client.ts  store.ts
ui/src/components/: AqlEditor.tsx  ConnectionDialog.tsx  CypherEditor.tsx  CytoscapeSchemaGraph.tsx  MappingPanel.tsx  ResultsPanel.tsx  SchemaWarningBanner.tsx  theme.ts
ui/src/lang/: aql.ts  cypher.ts
