[project]
name = "arango-cypher-py"
version = "0.1.0"
description = "Python-native Cypher to AQL transpiler for ArangoDB."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "python-arango>=8.1.1",
  "antlr4-python3-runtime",
]

[project.urls]
Homepage = "https://github.com/arango-solutions/arango-cypher-py"
Repository = "https://github.com/arango-solutions/arango-cypher-py"
Issues = "https://github.com/arango-solutions/arango-cypher-py/issues"

[project.optional-dependencies]
service = [
  "fastapi>=0.100.0",
  "uvicorn[standard]>=0.20.0",
]
analyzer = [
  "arangodb-schema-analyzer>=0.3.0,<0.4.0",
]
cli = [
  "typer>=0.9.0",
  "rich>=13.0.0",
]
owl = [
  "rdflib>=7.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "antlr4-tools",
  "PyYAML>=6.0.0",
  "httpx>=0.24.0",
  "rank_bm25>=0.2.2",
  "fastapi>=0.100.0",
  "uvicorn[standard]>=0.20.0",
]
neo4j = [
  "neo4j>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "integration: requires a running ArangoDB (see README); isolated profile tests use docker-compose.pytest.yml on port 28530",
  "tck: openCypher TCK harness and runners",
  "cross: cross-validates translated AQL against a reference Cypher engine (Neo4j); requires a running Neo4j (see docker-compose.neo4j.yml) plus RUN_INTEGRATION=1 and RUN_CROSS=1",
]

[tool.ruff]
line-length = 110
target-version = "py310"
extend-exclude = [
  "arango_cypher/_antlr",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
  "E501",
  "B008",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402", "F401", "F841"]
"scripts/**/*.py" = ["E402"]

[project.scripts]
arango-cypher-py = "arango_cypher.cli:app"

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arango_query_core", "arango_cypher"]

