[project]
name = "arango-cypher-py"
version = "0.1.0"
description = "Python-native Cypher to AQL transpiler for ArangoDB."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "python-arango>=8.1.1",
  "antlr4-python3-runtime",
  "fastapi>=0.100.0",
  "uvicorn[standard]>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/arango-solutions/arango-cypher-py"
Repository = "https://github.com/arango-solutions/arango-cypher-py"
Issues = "https://github.com/arango-solutions/arango-cypher-py/issues"

[project.optional-dependencies]
analyzer = [
  "arangodb-schema-analyzer>=0.6.0,<0.7.0",
]
service = [
  # As of arangodb-schema-analyzer 0.6.0 (2026-04-23) the analyzer is
  # published to PyPI, so headless service installs (ServiceMaker /
  # Container Manager / `pip install '.[service]'`) can resolve it
  # without a private index. Required at module-load time by
  # `arango_cypher.service` via `_require_analyzer_unless_opted_out`;
  # without this pin the import errors out unless deployers manually
  # set `ARANGO_CYPHER_ALLOW_HEURISTIC=1`. Pinned to the same band as
  # the [analyzer] extra so the two stay in lockstep.
  "arangodb-schema-analyzer>=0.6.0,<0.7.0",
  "typer>=0.9.0",
  "rich>=13.0.0",
]
cli = [
  "typer>=0.9.0",
  "rich>=13.0.0",
]
owl = [
  "rdflib>=7.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "antlr4-tools",
  "PyYAML>=6.0.0",
  "httpx>=0.24.0",
  "rank_bm25>=0.2.2",
  "fastapi>=0.100.0",
  "uvicorn[standard]>=0.20.0",
  "arangodb-schema-analyzer>=0.6.0,<0.7.0",
  # Included so the 14 CLI tests gated on `typer_available` run under the
  # default `pip install -e '.[dev]'` developer bootstrap. Without this the
  # CLI module has no CI coverage on the default dev path.
  "typer>=0.9.0",
]
neo4j = [
  "neo4j>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "integration: requires a running ArangoDB (see README); isolated profile tests use docker-compose.pytest.yml on port 28530",
  "tck: openCypher TCK harness and runners",
  "cross: cross-validates translated AQL against a reference Cypher engine (Neo4j); requires a running Neo4j (see docker-compose.neo4j.yml) plus RUN_INTEGRATION=1 and RUN_CROSS=1",
]

[tool.ruff]
line-length = 110
target-version = "py311"
extend-exclude = [
  "arango_cypher/_antlr",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
  "E501",
  "B008",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402", "F401", "F841"]
"scripts/**/*.py" = ["E402"]

[project.scripts]
arango-cypher-py = "arango_cypher.cli:app"

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arango_query_core", "arango_cypher"]

