[project]
name = "arango-cypher-py"
version = "0.1.0"
description = "Python-native Cypher to AQL transpiler for ArangoDB."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "python-arango>=8.1.1",
  "antlr4-python3-runtime",
  "fastapi>=0.100.0",
  "uvicorn[standard]>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/arango-solutions/arango-cypher-py"
Repository = "https://github.com/arango-solutions/arango-cypher-py"
Issues = "https://github.com/arango-solutions/arango-cypher-py/issues"

[project.optional-dependencies]
analyzer = [
  # 0.6.1 floor: pulls in the upstream tool-contract DoS bound
  # (request-size maxLength / maxItems) and the optional
  # SCHEMA_ANALYZER_ALLOWED_HOSTS / SCHEMA_ANALYZER_CACHE_ROOT env
  # guards. No API change vs 0.6.0 so this is a safe, additive bump
  # in the existing 0.6.x band.
  #
  # Canonical spelling of the analyzer pin. Every other extra that
  # needs the analyzer references this one via `arango-cypher-py[analyzer]`
  # so there is a single source of truth (PEP 621 / PEP 735
  # self-referencing extras — supported by pip, uv, and hatchling).
  "arangodb-schema-analyzer>=0.6.1,<0.7.0",
]
service = [
  # Headless service installs (ServiceMaker / Container Manager /
  # `pip install '.[service]'`) need the analyzer at module-load time
  # via `arango_cypher.service._require_analyzer_unless_opted_out`;
  # without it the import errors out unless deployers manually set
  # `ARANGO_CYPHER_ALLOW_HEURISTIC=1`. Referenced rather than
  # re-pinned so the [analyzer] band stays the single source of truth.
  "arango-cypher-py[analyzer]",
  "typer>=0.9.0",
  "rich>=13.0.0",
]
cli = [
  "typer>=0.9.0",
  "rich>=13.0.0",
]
owl = [
  "rdflib>=7.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "antlr4-tools",
  "PyYAML>=6.0.0",
  "httpx>=0.24.0",
  "rank_bm25>=0.2.2",
  "fastapi>=0.100.0",
  "uvicorn[standard]>=0.20.0",
  # Same analyzer band as [analyzer] / [service] — referenced rather
  # than duplicated.
  "arango-cypher-py[analyzer]",
  # Included so the 14 CLI tests gated on `typer_available` run under the
  # default `pip install -e '.[dev]'` developer bootstrap. Without this the
  # CLI module has no CI coverage on the default dev path.
  "typer>=0.9.0",
]
neo4j = [
  "neo4j>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "integration: requires a running ArangoDB (see README); isolated profile tests use docker-compose.pytest.yml on port 28530",
  "tck: openCypher TCK harness and runners",
  "cross: cross-validates translated AQL against a reference Cypher engine (Neo4j); requires a running Neo4j (see docker-compose.neo4j.yml) plus RUN_INTEGRATION=1 and RUN_CROSS=1",
]

[tool.ruff]
line-length = 110
target-version = "py311"
extend-exclude = [
  "arango_cypher/_antlr",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
  "E501",
  "B008",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402", "F401", "F841"]
"scripts/**/*.py" = ["E402"]

[project.scripts]
arango-cypher-py = "arango_cypher.cli:app"

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arango_query_core", "arango_cypher"]

